2006-08-26  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Plugin message mapper: new implementation. Multi-word parameters now
	need not be the last, and it is possible to retrieve the entire
	substring with preserved whitespace by using to_s. Also, parts of the
	map string can be bracketed to make them optional. Examples:
		remind :user [about] *stuff
	will respond to
		remind me about washing my teeth
	and also to
		remind me washing my teeth
	It is possible to have parameters in brackets, in which case they will
	be optional too, and default to nil or [] (resp. single- and
	multi-word parameters) unless an alternative is provided in the
	:defaults hash for the message map options.
	* Script plugin: new (UNSAFE!) eval function. Not documented in help.
	Not permitted by default.

2006-08-25 Mark Kretschmann <markey@web.de>

	* Added quiz plugin, a multiplayer trivia quiz game.

2006-08-20  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Topic plugin: fix a bug that prevented it from loading
	correctly.
	* New IRC Framework: make sure that NOTICEs and PRIVMSGs do not
	raise an exception when the target is in one of the special forms
	#<mask> or $<mask>. Needs some work, though, since this case should be
	handled specifically.

2006-08-17  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Fix help: It got broken while rearranging the plugin stuff, now it's
	properly fixed.
	* New Auth Framework: forgot to create the InvalidPassword exception.
	It's a RuntimeError now.
	* Fix help: this time for real (or so I hope).
	* New IRC Framework: topic plugin now works correctly.
	* New Auth Framework: nickserv plugin now defaults to false for its
	auth, so that only owner can do stuff with it
	* New Auth Framework: fix horrible typo, assignment instead of
	equality test when checking for the username during login.
	* Keywords plugin: tell and forget work again without 'keyword' before
	them.

2006-08-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
